--- a/styles/sass/base/_typography.scss
+++ b/styles/sass/base/_typography.scss
@@ -165,6 +165,10 @@
                 &__icon {
                     font-size: 2.5rem;
                     color: $color-text;
+
+                    @include respond(tab-land) {
+                        font-size: 3.5rem;
+                    }
                 }
             }
 
